Set ms.topic: faq where YamlMime:FAQ

--- a/browsers/edge/microsoft-edge-faq.yml
+++ b/browsers/edge/microsoft-edge-faq.yml
@@ -8,11 +8,10 @@ metadata:
   author: dansimp
   ms.author: dansimp
   ms.prod: edge
-  ms.topic: article
+  ms.topic: faq
   ms.mktglfcycl: general
   ms.sitesec: library
   ms.localizationpriority: medium
-    
 title: Frequently Asked Questions (FAQ) for IT Pros
 summary: |
   Applies to: Microsoft Edge on Windows 10
