--- a/windows/deployment/planning/windows-10-enterprise-faq-itpro.yml
+++ b/windows/deployment/planning/windows-10-enterprise-faq-itpro.yml
@@ -13,8 +13,7 @@ metadata:
   manager: laurawi
   ms.author: greglin
   audience: itpro
-  ms.topic: article
-    
+  ms.topic: faq
 title: 'Windows 10 Enterprise: FAQ for IT professionals'
 summary: Get answers to common questions around compatibility, installation, and support for Windows 10 Enterprise.
 
