--- a/windows/deployment/planning/windows-to-go-frequently-asked-questions.yml
+++ b/windows/deployment/planning/windows-to-go-frequently-asked-questions.yml
@@ -13,8 +13,7 @@ metadata:
   ms.sitesec: library
   audience: itpro
   author: greg-lindsay
-  ms.topic: article
-    
+  ms.topic: faq
 title: 'Windows To Go: frequently asked questions'
 summary: |
   **Applies to**
