--- a/windows/security/identity-protection/hello-for-business/hello-faq.yml
+++ b/windows/security/identity-protection/hello-for-business/hello-faq.yml
@@ -14,10 +14,10 @@ metadata:
   ms.collection:
     - M365-identity-device-management
     - highpri
-  ms.topic: article
+  ms.topic: faq
   localizationpriority: medium
   ms.date: 02/21/2022
-    
+
 title: Windows Hello for Business Frequently Asked Questions (FAQ)
 summary: |
   Applies to: Windows 10
