--- a/windows/security/threat-protection/microsoft-defender-application-guard/faq-md-app-guard.yml
+++ b/windows/security/threat-protection/microsoft-defender-application-guard/faq-md-app-guard.yml
@@ -14,7 +14,7 @@ metadata:
   manager: dansimp
   ms.custom: asr
   ms.technology: windows-sec
-    
+  ms.topic: faq
 title: Frequently asked questions - Microsoft Defender Application Guard
 summary: |
 
