--- a/windows/security/threat-protection/auditing/advanced-security-auditing-faq.yml
+++ b/windows/security/threat-protection/auditing/advanced-security-auditing-faq.yml
@@ -14,10 +14,9 @@ metadata:
   manager: dansimp
   audience: ITPro
   ms.collection: M365-security-compliance
-  ms.topic: conceptual
+  ms.topic: faq
   ms.date: 11/10/2021
   ms.technology: mde
-    
 title: Advanced security auditing FAQ
 summary: This topic for the IT professional lists questions and answers about understanding, deploying, and managing security audit policies.
   
