--- a/windows/security/threat-protection/intelligence/developer-faq.yml
+++ b/windows/security/threat-protection/intelligence/developer-faq.yml
@@ -15,9 +15,8 @@ metadata:
   manager: dansimp
   audience: ITPro
   ms.collection: M365-security-compliance
-  ms.topic: article
+  ms.topic: faq
   ms.technology: windows-sec
-    
 title: Software developer FAQ
 summary: This page provides answers to common questions we receive from software developers. For general guidance about submitting malware or incorrectly detected files, read the submission guide.
 
