--- a/windows/security/threat-protection/microsoft-defender-application-guard/faq-md-app-guard.yml
+++ b/windows/security/threat-protection/microsoft-defender-application-guard/faq-md-app-guard.yml
@@ -222,9 +222,9 @@ sections:
           2. Reboot the device.
           
        - question: |
-          What does the 'Allow users to trust files that open in Microsoft Defender Application Guard' option in the Group policy do?
+          What does the _Allow users to trust files that open in Microsoft Defender Application Guard_ option in the Group policy do?
         answer: |
-         on Windows 10 Prior to version 2004, this policy was present. It was later removed from newer version of Windows, as this policy doesn't enforce anything either for Edge or Office.
+         This policy was present in Windows 10 prior to version 2004. It was removed from later versions of Windows as it doesn't enforce anything for either Edge or Office.
 
 
 additionalContent: |
