--- a/education/index.yml
+++ b/education/index.yml
@@ -13,23 +13,150 @@ metadata:
   ms.date: 10/24/2019
 
 productDirectory:
+  title: For IT admins
+  summary: This guide is designed for IT admins looking for the simplest way to move their platform to the cloud. It does not capture all the necessary steps for large scale or complex deployments.
   items:
     # Card    
-    - title: IT Admins
-      # imageSrc should be square in ratio with no whitespace
-      imageSrc: ./images/EDUAdmins.svg
+    - title: Phase 1 - Cloud deployment
+      imageSrc: ./images/EDU-Deploy.svg
       links:
-        - url: itadmins.yml
-          text: Get started with deploying and managing a full cloud IT solution for your school.
+        - url: /microsoft-365/education/deploy/create-your-office-365-tenant
+          text: 1. Create your Office 365 tenant
+        - url: /microsoft-365/education/deploy/secure-and-configure-your-network
+          text: 2. Secure and configure your network
+        - url: /microsoft-365/education/deploy/aad-connect-and-adfs
+          text: 3. Sync your active directory
+        - url: /microsoft-365/education/deploy/school-data-sync
+          text: 4. Sync you SIS using School Data Sync
+        - url: /microsoft-365/education/deploy/license-users
+          text: 5. License users
     # Card
-    - title: Developers
-      imageSrc: ./images/EDUDevelopers.svg
+    - title: Phase 2 - Device management
+      imageSrc: ./images/EDU-Device-Mgmt.svg
       links:
-        - url: developers.yml
-          text: Looking for information about developing solutions on Microsoft Education products? Start here. 
+        - url: ./windows/index.md
+          text: 1. Get started with Windows 10 for Education
+        - url: /microsoft-365/education/deploy/set-up-windows-10-education-devices
+          text: 2. Set up Windows 10 devices
+        - url: /microsoft-365/education/deploy/intune-for-education
+          text: 3. Get started with Intune for Education
+        - url: /microsoft-365/education/deploy/use-intune-for-education
+          text: 4. Use Intune to manage groups, apps, and settings
+        - url: /intune/enrollment/enrollment-autopilot
+          text: 5. Enroll devices using Windows Autopilot
     # Card    
-    - title: Partners
-      imageSrc: ./images/EDUPartners.svg
+    - title: Phase 3 - Apps management
+      imageSrc: ./images/EDU-Apps-Mgmt.svg
       links:
-        - url: partners.yml
-          text: Looking for resources available to Microsoft Education partners? Start here.
+        - url: /microsoft-365/education/deploy/configure-admin-settings
+          text: 1. Configure admin settings
+        - url: /microsoft-365/education/deploy/set-up-teams-for-education
+          text: 2. Set up Teams for Education
+        - url: /microsoft-365/education/deploy/deploy-office-365
+          text: 3. Set up Office 365
+        - url: /microsoft-365/education/deploy/microsoft-store-for-education
+          text: 4. Install apps from Microsoft Store for Education
+        - url: /microsoft-365/education/deploy/minecraft-for-education
+          text: 5. Install Minecraft - Education Edition
+    # Card    
+    - title: Complete your deployment
+      # imageSrc should be square in ratio with no whitespace
+      imageSrc: ./images/EDU-Tasks.svg
+      links:
+        - url: /microsoft-365/education/deploy/deploy-exchange-online
+          text: Deploy Exchange Online
+        - url: /microsoft-365/education/deploy/deploy-sharepoint-online-and-onedrive
+          text: Deploy SharePoint Online and OneDrive
+        - url: /microsoft-365/education/deploy/deploy-exchange-server-hybrid
+          text: Deploy Exchange Server hybrid
+        - url: /microsoft-365/education/deploy/deploy-sharepoint-server-hybrid
+          text: Deploy SharePoint Server Hybrid
+    # Card
+    - title: Security & compliance
+      imageSrc: ./images/EDU-Lockbox.svg
+      links:
+        - url: /azure/active-directory/fundamentals/active-directory-deployment-checklist-p2
+          text: AAD feature deployment guide
+        - url: https://techcommunity.microsoft.com/t5/Azure-Information-Protection/Azure-Information-Protection-Deployment-Acceleration-Guide/ba-p/334423
+          text: Azure information protection deployment acceleration guide
+        - url: /cloud-app-security/getting-started-with-cloud-app-security
+          text: Microsoft Defender for Cloud Apps
+        - url: /microsoft-365/compliance/create-test-tune-dlp-policy
+          text: Office 365 data loss prevention
+        - url: /microsoft-365/compliance/
+          text: Office 365 advanced compliance
+        - url: https://social.technet.microsoft.com/wiki/contents/articles/35748.office-365-what-is-customer-lockbox-and-how-to-enable-it.aspx
+          text: Deploying Lockbox
+    # Card    
+    - title: Analytics & insights
+      imageSrc: ./images/EDU-Education.svg
+      links:
+        - url: /power-bi/service-admin-administering-power-bi-in-your-organization
+          text: Power BI for IT admins
+        - url: /dynamics365/#pivot=get-started
+          text: Dynamics 365
+    # Card    
+    - title: Find deployment help
+      imageSrc: ./images/EDU-FindHelp.svg
+      links:
+        - url: /microsoft-365/education/deploy/find-deployment-help
+          text: IT admin help
+        - url: https://social.technet.microsoft.com/forums/en-us/home
+          text: TechNet
+    # Card    
+    - title: Check out our education journey
+      imageSrc: ./images/EDU-ITJourney.svg
+      links:
+        - url: https://edujourney.microsoft.com/k-12/
+          text: K-12
+        - url: https://edujourney.microsoft.com/hed/
+          text: Higher education
+    # Card    
+    - title: Additional support resources
+      imageSrc: ./images/EDU-Teachers.svg
+      links:
+        - url: https://support.office.com/en-us/education
+          text: Education help center
+        - url: https://support.office.com/en-us/article/teacher-training-packs-7a9ee74a-8fe5-43d3-bc23-a55185896921
+          text: Teacher training packs
+
+additionalContent:
+  sections:
+    - title: For developers # < 60 chars (optional)
+      summary: Are you an app developer looking for information about developing solutions on Microsoft Education products? Start here. # < 160 chars (optional)
+    - items:
+        # Card
+        - title: UWP apps for education
+          summary: Learn how to write universal apps for education.
+          url: /windows/uwp/apps-for-education/
+        # Card
+        - title: Take a test API
+          summary: Learn how web applications can use the API to provide a locked down experience for taking tests.
+          url: /windows/uwp/apps-for-education/take-a-test-api
+        # Card
+        - title: Office Education Dev center
+          summary: Integrate with Office 365 across devices and services to extend Microsoft enterprise-scale compliance and security to students, teachers, and staff in your education app
+          url: https://developer.microsoft.com/office/edu
+        # Card
+        - title: Data Streamer
+          summary: Bring new STEM experiences into the classroom with real-time data in Excel using Data Streamer. Data Streamer can send data to Excel from a sensor or application.
+          url: /microsoft-365/education/data-streamer
+    - title: For partners # < 60 chars (optional)
+      summary: Looking for resources available to Microsoft Education partners? Start here. # < 160 chars (optional)
+    - items:
+        # Card
+        - title: Microsoft Partner Network
+          summary: Discover the latest news and resources for Microsoft Education products, solutions, licensing and readiness.
+          url: https://partner.microsoft.com/solutions/education
+        # Card
+        - title: Authorized Education Partner (AEP) program
+          summary: Become authorized to purchase and resell academic priced offers and products to Qualified Educational Users (QEUs).
+          url: https://www.mepn.com/
+        # Card
+        - title: Authorized Education Partner Directory
+          summary: Search through the list of Authorized Education Partners worldwide who can deliver on customer licensing requirements, and provide solutions and services to current and future school needs.
+          url: https://www.mepn.com/MEPN/AEPSearch.aspx
+        # Card
+        - title: Education Partner community Yammer group
+          summary: Sign in with your Microsoft Partner account and join the Education Partner community private group on Yammer.
+          url: https://www.yammer.com/mepn/
