--- a/windows/client-management/index.yml
+++ b/windows/client-management/index.yml
@@ -16,7 +16,7 @@ metadata:
   author: aczechowski
   ms.author: aaroncz
   manager: dougeby
-  ms.date: 08/05/2021 #Required; mm/dd/yyyy format.
+  ms.date: 03/28/2022 #Required; mm/dd/yyyy format.
   localization_priority: medium
     
 # linkListType: architecture | concept | deploy | download | get-started | how-to-guide | learn | overview | quickstart | reference | tutorial | video | whats-new
@@ -29,7 +29,7 @@ landingContent:
     linkLists:
       - linkListType: overview
         links:
-          - text: Administrative Tools in Windows 10
+          - text: Windows Tools/Administrative Tools
             url: administrative-tools-in-windows-10.md
           - text: Create mandatory user profiles
             url: mandatory-user-profile.md
