--- a/windows/deployment/do/index.yml
+++ b/windows/deployment/do/index.yml
@@ -47,6 +47,8 @@ landingContent:
             url: waas-delivery-optimization-setup.md#windows-powershell-cmdlets
           - text: Troubleshoot Delivery Optimization
             url: waas-delivery-optimization-setup.md#troubleshooting
+          - text: Delivery Optimization Frequently Asked Questions
+            url: waas-delivery-optimization-faq
           - text: Submit feedback
             url: https://support.microsoft.com/help/4021566/windows-10-send-feedback-to-microsoft-with-feedback-hub-app
 
