--- a/windows/deployment/do/index.yml
+++ b/windows/deployment/do/index.yml
@@ -48,7 +48,7 @@ landingContent:
           - text: Troubleshoot Delivery Optimization
             url: waas-delivery-optimization-setup.md#troubleshooting
           - text: Delivery Optimization Frequently Asked Questions
-            url: waas-delivery-optimization-faq.md
+            url: ../update/waas-delivery-optimization-faq.md
           - text: Submit feedback
             url: https://support.microsoft.com/help/4021566/windows-10-send-feedback-to-microsoft-with-feedback-hub-app
 
