--- a/windows/hub/breadcrumb/toc.yml
+++ b/windows/hub/breadcrumb/toc.yml
@@ -16,6 +16,10 @@ items:
           - name: Deployment
             tocHref: /windows/deployment/
             topicHref: /windows/deployment/
+            items:
+              - name: Delivery Optimization
+                tocHref: /windows/deployment/do/
+                topicHref: /windows/deployment/do/
           - name: Application management
             tocHref: /windows/application-management/
             topicHref: /windows/application-management/
@@ -36,22 +40,18 @@ items:
               - name: Windows Hello for Business
                 tocHref: /windows/security/identity-protection/hello-for-business/
                 topicHref: /windows/security/identity-protection/hello-for-business/
-              - name: Threat protection
-                tocHref: /windows/security/threat-protection/
-                topicHref: /windows/security/threat-protection/
-                items:
-                  - name: Security auditing
-                    tocHref: /windows/security/threat-protection/auditing/
-                    topicHref: /windows/security/threat-protection/auditing/security-auditing-overview
-                  - name: Microsoft Defender Application Guard
-                    tocHref: /windows/security/threat-protection/microsoft-defender-application-guard/
-                    topicHref: /windows/security/threat-protection/microsoft-defender-application-guard/
-                  - name: Security policy settings
-                    tocHref: /windows/security/threat-protection/security-policy-settings/
-                    topicHref: /windows/security/threat-protection/security-policy-settings/security-policy-settings
-                  - name: Application Control for Windows
-                    tocHref: /windows/security/threat-protection/windows-defender-application-control/
-                    topicHref: /windows/security/threat-protection/windows-defender-application-control/
-                  - name: Windows Defender Firewall
-                    tocHref: /windows/security/threat-protection/windows-firewall/
-                    topicHref: /windows/security/threat-protection/windows-firewall/windows-firewall-with-advanced-security
+              - name: Security auditing
+                tocHref: /windows/security/threat-protection/auditing/
+                topicHref: /windows/security/threat-protection/auditing/security-auditing-overview
+              - name: Microsoft Defender Application Guard
+                tocHref: /windows/security/threat-protection/microsoft-defender-application-guard/
+                topicHref: /windows/security/threat-protection/microsoft-defender-application-guard/
+              - name: Security policy settings
+                tocHref: /windows/security/threat-protection/security-policy-settings/
+                topicHref: /windows/security/threat-protection/security-policy-settings/security-policy-settings
+              - name: Application Control for Windows
+                tocHref: /windows/security/threat-protection/windows-defender-application-control/
+                topicHref: /windows/security/threat-protection/windows-defender-application-control/
+              - name: Windows Defender Firewall
+                tocHref: /windows/security/threat-protection/windows-firewall/
+                topicHref: /windows/security/threat-protection/windows-firewall/windows-firewall-with-advanced-security
