Updated as per feedback

--- a/windows/client-management/mdm/toc.yml
+++ b/windows/client-management/mdm/toc.yml
@@ -963,10 +963,10 @@ items:
           items: 
             - name: WindowsAdvancedThreatProtection DDF file
               href: windowsadvancedthreatprotection-ddf.md
-        - name: WindowsAutoPilot CSP
+        - name: WindowsAutopilot CSP
           href: windowsautopilot-csp.md
           items: 
-            - name: WindowsAutoPilot DDF file
+            - name: WindowsAutopilot DDF file
               href: windowsautopilot-ddf-file.md
         - name: WindowsDefenderApplicationGuard CSP
           href: windowsdefenderapplicationguard-csp.md
