Initial commit of AppId Tagging docs

--- a/windows/security/threat-protection/windows-defender-application-control/TOC.yml
+++ b/windows/security/threat-protection/windows-defender-application-control/TOC.yml
@@ -101,7 +101,7 @@
           href: disable-windows-defender-application-control-policies.md
         - name: LOB Win32 Apps on S Mode
           href: LOB-win32-apps-on-s.md
-    - name: Windows Defender Application Control operational guide
+    - name: WDAC operational guide
       href: windows-defender-application-control-operational-guide.md
       items: 
         - name: Understanding Application Control event tags
@@ -114,6 +114,11 @@
           href: operations/known-issues.md
         - name: Managed installer and ISG technical reference and troubleshooting guide
           href: configure-wdac-managed-installer.md
+    - name: WDAC AppId Tagging guide
+      href: windows-defender-application-control-appid-tagging-guide.md
+      items:
+        - name: Understanding Application Control event tags
+          href: event-tag-explanations.md
     - name: AppLocker
       href: applocker\applocker-overview.md
       items: 
